--- a/config.cfg
+++ b/config.cfg
@@ -1,4 +1,4 @@
 LOGS_FOLDER='/root/.config/storjshare/logs'
-CONFIG_FOLDER='/root/.config/storjshare/configs'
+CONFIGS_FOLDER='/root/.config/storjshare/configs'
 WATCHDOG_LOG='/var/log/storjshare-daemon-status.log'
 EMAIL=""
